--- a/src/components/ui/CallToAction.astro
+++ b/src/components/ui/CallToAction.astro
@@ -38,14 +38,14 @@ const {
       <img
         class="match-brand-color text-primary h-full w-full origin-bottom-right object-cover"
         src="/images/shapes/cta-shape-one.svg"
-        alt="pattern"
+        alt="decorative pattern"
       />
     </div>
     <div class="pointer-events-none absolute right-0 bottom-0 z-10 h-40 w-44 opacity-30 max-lg:hidden md:opacity-100">
       <img
         class="match-brand-color text-primary h-full w-full origin-bottom-right object-cover"
         src="/images/shapes/cta-shape-two.svg"
-        alt="pattern"
+        alt="decorative pattern"
       />
     </div>
     
