--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -33,14 +33,14 @@ const footerMenu = [
     <img
       class="h-full w-full object-cover"
       src="/images/footer/footer-bg-pattern-1-fixed.svg"
-      alt="pattern"
+      alt="decorative pattern"
     />
   </div>
   <div class="pointer-events-none absolute top-0 right-0 z-10 h-40 w-40 opacity-30 md:opacity-100">
     <img
       class="h-full w-full object-cover"
       src="/images/footer/footer-bg-pattern-2-fixed.svg"
-      alt="pattern"
+      alt="decorative pattern"
     />
   </div>
 
