--- a/src/components/ui/Navigation.astro
+++ b/src/components/ui/Navigation.astro
@@ -15,6 +15,7 @@
         <li><a href="/about">关于我们</a></li>
         <li><a href="/team">团队介绍</a></li>
         <li><a href="/services">服务</a></li>
+        <li><a href="/faq">常见问题</a></li>
         <li><a href="/contact">联系我们</a></li>
       </ul>
       <div class="nav-toggle" id="nav-toggle">
